--- a/index.html
+++ b/index.html
@@ -1,224 +1,200 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Разработка сайтов под ключ" />
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/normalaze.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- Header section-->
-    <header class="header">
-      <div class="container header-container">
-        <a class="logo header-logo link" href="" lang="en"
-          >Web<span class="logo-accent">Studio</span></a
-        >
-        <nav class="header-nav">
-          <ul class="list header-list">
-            <li class="header-item">
-              <a class="header-link link akcent-nav" href="./index.html"
-                >Студия</a
-              >
-            </li>
-            <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="list header-cont-list">
-          <li class="header-cont-item">
-            <a class="header-link-cont link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Разработка сайтов под ключ" />
+  <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/normalaze.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <!-- Header section-->
+  <header class="header">
+    <div class="container header-container">
+      <a class="logo header-logo link" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
+      <nav class="header-nav">
+        <ul class="list header-list">
+          <li class="header-item">
+            <a class="header-link link akcent-nav" href="./index.html">Студия</a>
           </li>
-          <li class="header-cont-item">
-            <a class="header-link-cont link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="list header-cont-list">
+        <li class="header-cont-item">
+          <a class="header-link-cont link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="header-cont-item">
+          <a class="header-link-cont link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <!-- Main section -->
+  <main class="main">
+    <!-- Hirow  section -->
+    <section class="hero section">
+      <div class="container">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
+      </div>
+    </section>
+    <!-- Benefits section -->
+    <section class="benefits section">
+      <div class="container">
+        <ul class="benefits-list list card-cet">
+          <li class="benefits-item">
+            <h3 class="benefits-title">Внимание к деталям</h3>
+            <p class="benefits-desc">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Пунктуальность</h3>
+            <p class="benefits-desc">
+              Задача организации, в особенности же рамки и место обучения
+              кадров влечет за собой.
+            </p>
+          </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Планирование</h3>
+            <p class="benefits-desc">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Современные технологии</h3>
+            <p class="benefits-desc">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий
+            </p>
           </li>
         </ul>
       </div>
-    </header>
-    <!-- Main section -->
-    <main class="main">
-      <!-- Hirow  section -->
-      <section class="hero section">
-        <div class="container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
-        </div>
-      </section>
-      <!-- Benefits section -->
-      <section class="benefits section">
-        <div class="container">
-          <ul class="benefits-list list card-cet">
-            <li class="benefits-item">
-              <h3 class="benefits-title">Внимание к деталям</h3>
-              <p class="benefits-desc">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li class="benefits-item">
-              <h3 class="benefits-title">Пунктуальность</h3>
-              <p class="benefits-desc">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li class="benefits-item">
-              <h3 class="benefits-title">Планирование</h3>
-              <p class="benefits-desc">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li class="benefits-item">
-              <h3 class="benefits-title">Современные технологии</h3>
-              <p class="benefits-desc">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!-- aboot section -->
-      <section class="aboot section">
-        <div class="container">
-          <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="aboot-list list card-cet">
-            <li class="aboot-item">
-              <img
-                class="aboot-img"
-                src="./imeges/img-1.jpg"
-                alt="Програмист пишет код"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li class="aboot-item">
-              <img
-                class="aboot-img"
-                src="./imeges/img-2.jpg"
-                alt="Веб дизайнер работает"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li class="aboot-item">
-              <img
-                class="aboot-img"
-                src="./imeges/img-3.jpg"
-                alt="Поиск цвета на политре красок"
-                width="370"
-                height="294"
-              />
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!-- team section -->
-      <section class="team section">
-        <div class="container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list card-cet">
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./imeges/nk/img-1.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
-              <div class="team-wrapper">
-                <h3 class="team-name">Игорь Демьяненко</h3>
-                <p class="team-desc" lang="en">Product Designer</p>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./imeges/nk/img-2.jpg"
-                alt="Ольга Репина"
-                width="270"
-                height="260"
-              />
-              <div class="team-wrapper">
-                <h3 class="team-name">Ольга Репина</h3>
-                <p class="team-desc" lang="en">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./imeges/nk/img-3.jpg"
-                alt="Николай Тарасов"
-                width="270"
-                height="260"
-              />
-              <div class="team-wrapper">
-                <h3 class="team-name">Николай Тарасов</h3>
-                <p class="team-desc" lang="en">Marketing</p>
-              </div>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-img"
-                src="./imeges/nk/img-4.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-                height="260"
-              />
-              <div class="team-wrapper">
-                <h3 class="team-name">Михаил Ермаков</h3>
-                <p class="team-desc" lang="en">UI Designer</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-    <!-- Footer section -->
-    <footer class="footer">
+    </section>
+    <!-- aboot section -->
+    <section class="aboot section">
       <div class="container">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-accent-footer">Studio</span></a
-        >
-        <address class="footer-address">
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a
-                class="footer-link link"
-                href="https://goo.gl/maps/461k6AUFMQKHegbq6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-link link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="aboot-list list card-cet">
+          <li class="aboot-item">
+            <img class="aboot-img" src="./imeges/home/img-1.jpg" alt="Програмист пишет код" width="370" height="294" />
+          </li>
+          <li class="aboot-item">
+            <img class="aboot-img" src="./imeges/home/img-2.jpg" alt="Веб дизайнер работает" width="370" height="294" />
+          </li>
+          <li class="aboot-item">
+            <img class="aboot-img" src="./imeges/home/img-3.jpg" alt="Поиск цвета на политре красок" width="370"
+              height="294" />
+          </li>
+        </ul>
       </div>
-    </footer>
-  </body>
+    </section>
+    <!-- team section -->
+    <section class="team section">
+      <div class="container">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list list card-cet">
+          <li class="team-item">
+            <img class="team-img" src="./imeges/nk/img-1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+            <div class="team-wrapper">
+              <h3 class="team-name">Игорь Демьяненко</h3>
+              <p class="team-desc" lang="en">Product Designer</p>
+              <ul class="social-list list card-cet">
+                <li class="social-item">
+                  <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
+                    aria-label="instagram">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./imeges/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
+                    aria-label="twitter">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./imeges/icon.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
+                    aria-label="facebook">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./imeges/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
+                    aria-label="instagram">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./imeges/icon.svg#icon-linkedin">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./imeges/nk/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
+            <div class="team-wrapper">
+              <h3 class="team-name">Ольга Репина</h3>
+              <p class="team-desc" lang="en">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./imeges/nk/img-3.jpg" alt="Николай Тарасов" width="270" height="260" />
+            <div class="team-wrapper">
+              <h3 class="team-name">Николай Тарасов</h3>
+              <p class="team-desc" lang="en">Marketing</p>
+            </div>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./imeges/nk/img-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
+            <div class="team-wrapper">
+              <h3 class="team-name">Михаил Ермаков</h3>
+              <p class="team-desc" lang="en">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <!-- Footer section -->
+  <footer class="footer">
+    <div class="container">
+      <a class="logo link" href="./index.html">Web<span class="logo-accent-footer">Studio</span></a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a class="footer-link link" href="https://goo.gl/maps/461k6AUFMQKHegbq6" target="_blank"
+              rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
+  </footer>
+</body>
+
 </html>
