--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
             <div class="team-wrapper">
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-desc" lang="en">Product Designer</p>
-              <ul class="social-list list card-cet">
+              <ul class="social-list">
                 <li class="social-item">
                   <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
                     aria-label="instagram">
                     <svg class="icon" width="20" height="20">
-                      <use href="./imeges/icon.svg#icon-instagram"></use>
+                      <use href="./imeges/icomoon.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -126,7 +126,7 @@
                   <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
                     aria-label="twitter">
                     <svg class="icon" width="20" height="20">
-                      <use href="./imeges/icon.svg#icon-twitter"></use>
+                      <use href="./imeges/icomoon.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -134,7 +134,7 @@
                   <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
                     aria-label="facebook">
                     <svg class="icon" width="20px" height="20px">
-                      <use href="./imeges/icon.svg#icon-facebook"></use>
+                      <use href="./imeges/icomoon.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -142,7 +142,7 @@
                   <a class="social-link link" href="" target="_blank" rel="noopener noreferrer"
                     aria-label="instagram">
                     <svg class="icon" width="20" height="20">
-                      <use href="./imeges/icon.svg#icon-linkedin">
+                      <use href="./imeges/icomoon.svg#facebook">
                       </use>
                     </svg>
                   </a>
