--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <div class="team-wrapper">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p class="team-desc" lang="en">Product Designer</p>
-                <ul class="social-list">
+                <ul class="social-list list card-cet">
                   <li class="social-item">
                     <a
                       class="social-link link"
