--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="instagram"
+                      aria-label="linkedin"
                     >
                       <svg class="icon" width="20" height="20">
-                        <use href="./imeges/icomoon.svg#facebook"></use>
+                        <use href="./imeges/icomoon.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
