--- a/portfolio.html
+++ b/portfolio.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Разработка сайтов под ключ" />
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/normalaze.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- Header section-->
-    <header class="header">
-      <div class="container header-container">
-        <a class="logo header-logo link" href="" lang="en"
-          >Web<span class="logo-accent">Studio</span></a
-        >
-        <nav class="header-nav">
-          <ul class="list header-list">
-            <li class="header-item">
-              <a class="header-link link" href="./index.html"
-                >Студия</a
-              >
-            </li>
-            <li class="header-item">
-              <a class="header-link link akcent-nav" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="list header-cont-list">
-          <li class="header-cont-item">
-            <a class="header-link-cont link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Разработка сайтов под ключ" />
+  <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/normalaze.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <!-- Header section-->
+  <header class="header">
+    <div class="container header-container">
+      <a class="logo header-logo link" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
+      <nav class="header-nav">
+        <ul class="list header-list">
+          <li class="header-item">
+            <a class="header-link link akcent-nav" href="./index.html">Студия</a>
           </li>
-          <li class="header-cont-item">
-            <a class="header-link-cont link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Контакты</a>
           </li>
         </ul>
-      </div>
-    </header>
+      </nav>
+      <ul class="list header-cont-list">
+        <li class="header-cont-item">
+          <a class="header-link-cont link" href="mailto:info@devstudio.com"><svg class="icon-cont" width="16"
+              height="12">
+              <use href="./imeges/icomoon.svg#envelope"></use>
+            </svg>info@devstudio.com</a>
+        </li>
+        <li class="header-cont-item">
+          <a class="header-link-cont link" href="tel:+380961111111"> <svg class="icon-cont" width="10" height="16">
+              <use href="./imeges/icomoon.svg#smartphone"></use>
+            </svg> +38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </header>
     <!-- Main section -->
     <main class="main">
       <!-- filter section -->
@@ -215,33 +212,62 @@
   <!-- Footer section -->
   <footer class="footer">
     <div class="container">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-accent-footer">Studio</span></a
-      >
-      <address class="footer-address">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-link link"
-              href="https://goo.gl/maps/461k6AUFMQKHegbq6"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer-card-cet">
+        <div>
+          <a class="logo link" href="./index.html">Web<span class="logo-accent-footer">Studio</span></a>
+          <address class="footer-address">
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a class="footer-link link" href="https://goo.gl/maps/461k6AUFMQKHegbq6" target="_blank"
+                  rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+
+              </li>
+            </ul>
+            </ul>
+        </div>
+        
+          </address><div>
+          <h3 class="benefits-title"><span class="title-accent-footer">приєднуйтесь</span></h3>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
+                <svg class="icon-footer" width="20" height="20">
+                  <use href="./imeges/icomoon.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="twitter">
+                <svg class="icon-footer" width="20" height="20">
+                  <use href="./imeges/icomoon.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="facebook">
+                <svg class="icon-footer" width="20" height="20">
+                  <use href="./imeges/icomoon.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="linkedin">
+                <svg class="icon-footer" width="20" height="20">
+                  <use href="./imeges/icomoon.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </footer>
 </body>
+
 </html>
