--- a/index.html
+++ b/index.html
@@ -335,64 +335,61 @@
     </section>
   </main>
   <!-- Footer section -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-card-cet">
-        <div>
-          <a class="logo link" href="./index.html">Web<span class="logo-accent-footer">Studio</span></a>
-          <address class="footer-address">
-            <ul class="footer-list list">
-              <li class="footer-item">
-                <a class="footer-link link" href="https://goo.gl/maps/461k6AUFMQKHegbq6" target="_blank"
-                  rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-              </li>
-              <li class="footer-item">
-                <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="footer-item">
-                <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+ <footer class="footer">
+  <div class="container">
+    <div class="footer-card-cet">
+      <div>
+        <a class="logo link" href="./index.html">Web<span class="logo-accent-footer">Studio</span></a>
+        <address class="footer-address">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a class="footer-link link" href="https://goo.gl/maps/461k6AUFMQKHegbq6" target="_blank"
+                rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
 
-              </li>
-            </ul>
-            </ul>
-        </div>
-        
-          </address><div>
-          <h3 class="benefits-title"><span class="title-accent-footer">приєднуйтесь</span></h3>
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
-              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
-                <svg class="icon-footer" width="20" height="20">
-                  <use href="./imeges/icomoon.svg#instagram"></use>
-                </svg>
-              </a>
             </li>
-            <li class="footer-social-item">
-              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="twitter">
-                <svg class="icon-footer" width="20" height="20">
-                  <use href="./imeges/icomoon.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="facebook">
-                <svg class="icon-footer" width="20" height="20">
-                  <use href="./imeges/icomoon.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="social-link-footer link" href="" target="_blank" rel="noopener noreferrer" aria-label="linkedin">
-                <svg class="icon-footer" width="20" height="20">
-                  <use href="./imeges/icomoon.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+          </ul> 
+        </address>
+      </div>
+        <div class="footer-set"> 
+        <p class="benefits-title"><span class="title-accent-footer">приєднуйтесь</span></p>
+        <ul class="social-list list">
+          <li class="social-item">
+            <a class="social-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
+              <svg class="icon" width="20" height="20">
+                <use href="./imeges/icomoon.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="twitter">
+              <svg class="icon" width="20" height="20">
+                <use href="./imeges/icomoon.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="facebook">
+              <svg class="icon" width="20px" height="20px">
+                <use href="./imeges/icomoon.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="linkedin">
+              <svg class="icon" width="20" height="20">
+                <use href="./imeges/icomoon.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 </body>
-
-</html>
