--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <section class="client section">
       <div class="container">
         <h2 class="section-title">Постійні клієнти</h2>
-        <ul class="client-list list">
+        <ul class="client-list list card-cet">
           <li class="client-item">
             <a class="client-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="логотип">
               <svg class="icon-client" width="106" height="80">
@@ -357,7 +357,7 @@
         </address>
       </div>
         <div class="footer-set"> 
-        <p class="benefits-title"><span class="title-accent-footer">приєднуйтесь</span></p>
+        <p class="footer-social-title">приєднуйтесь</p>
         <ul class="social-list list">
           <li class="social-item">
             <a class="social-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
