--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
       
         <ul class="portfolio-list list card-cet">
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-1.jpg"
@@ -86,7 +86,7 @@
         </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-2.jpg"
@@ -101,7 +101,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-3.jpg"
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-4.jpg"
@@ -131,7 +131,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-5.jpg"
@@ -145,7 +145,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-6.jpg"
@@ -160,7 +160,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-7.jpg"
@@ -175,7 +175,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-8.jpg"
@@ -190,7 +190,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
             <img
               class="portfolio-img"
               src="./imeges/portfolio/img-9.jpg"
@@ -208,7 +208,7 @@
       </div>
       </section>
     </main>
- <!-- Footer section -->
+     <!-- Footer section -->
  <footer class="footer">
   <div class="container">
     <div class="footer-card-cet">
@@ -231,7 +231,7 @@
         </address>
       </div>
         <div class="footer-set"> 
-        <p class="benefits-title"><span class="title-accent-footer">приєднуйтесь</span></p>
+        <p class="footer-social-title">приєднуйтесь</p>
         <ul class="social-list list">
           <li class="social-item">
             <a class="social-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
